Fixed logo spacing

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -367,6 +367,7 @@ th {
 		display: inline-block !important;
 		width:16px;
 		height:16px;
+		margin-right: 0.5em;
 	}
 	.version {
 		background: #333;
